# schiffeversenken

./: protokoll.txt
c/server/: AUTHORS  INSTALL-NOTES-JANNIS  config.h  configure  configure.in
c/server/src/: Makefile.am  Makefile.in  chat.cpp  chat.h  room.cpp  room.h  schiffeversenkend.cpp  schiffeversenkend.h  svserver.cpp  svserver.h  user.cpp  user.h
doc/: protokoll.txt
python/server/: Majordomo.py  QueueManager.py  SVChandler.py  SVClient.py  SVError.py  SVGame.py  SVGhandler.py  SVService.py  SVShandler.py  SVStaticData.py  StateMachine.py  keep_server_alive.py  map.py  msgHandler.py  schiffeversenken-server.py  schiffeversenken.py  ship.py
qt4/client/: connection.cpp  connection.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  schiffeversenken-client-v2.pro
tcl/client/: schiffeversenken.tcl
