bin_PROGRAMS = schiffeversenkend
schiffeversenkend_SOURCES = chat.cpp room.cpp schiffeversenkend.cpp \
	svserver.cpp user.cpp

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
schiffeversenkend_LDFLAGS = $(all_libraries) 
noinst_HEADERS = chat.h room.h schiffeversenkend.h svserver.h user.h
